Bug 1564203 - Clear VR external shared memory when recreating a new VR process. r=kip a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D37332

--HG--
extra : source : a52b60c338908fc9b5aab1945b7d7b7c210d9f13